--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
  <table cellspacing="10">
   <thead>
     <tr>
-      <th><strong>Dates</strong></td>
-      <th><strong>Work</strong></td>
+      <td><strong>Dates</strong></td>
+      <td><strong>Work</strong></td>
     </tr>
   </thead>
     <tbody>
